--- a/app/views/teachers/my_score.html.erb
+++ b/app/views/teachers/my_score.html.erb
@@ -12,6 +12,7 @@
           <li role="presentation" class="active"><a href="javascript:void(0)">第一步 选择专业</a></li>
           <li role="presentation"><a href="javascript:void(0)">第二步 选择班级</a></li>
           <li role="presentation"><a href="javascript:void(0)">第三步 选择课程</a></li>
+          <li role="presentation"><a href="javascript:void(0)">第四步 选择测试</a></li>
         </ul>
   	</div>
   	<%= form_tag select_grade_teachers_path, method: :post, id: "scoreSearch" do %>
