--- a/app/assets/stylesheets/application/custom.scss
+++ b/app/assets/stylesheets/application/custom.scss
@@ -1104,7 +1104,7 @@ body.teachers__my_account, body.teachers__upload_course_ware,
 body.teachers__my_questions, body.teachers__my_answers, body.teachers__discuss_center,
 body.teachers__my_score, body.teachers__select_grade, body.teachers__select_course,
 body.teachers__show_score, body.teachers__show_grade_score, body.teachers__import_question, 
-.devise__registrations__update, .devise__registrations__edit {
+.devise__registrations__update, .devise__registrations__edit, .teachers__select_exam {
   .main-content {
     .teacher-content {
       margin-top: 20px;
@@ -1429,7 +1429,7 @@ body.teachers__show_score, body.teachers__show_grade_score, body.teachers__impor
           height: 380px;
         }
 
-        .col-sm-4 {
+        .desc {
           padding-top: 200px;
         }
       }
