--- a/app/views/teachers/select_course.html.erb
+++ b/app/views/teachers/select_course.html.erb
@@ -13,7 +13,7 @@
 	      <li role="presentation"><a href="javascript:void(0)">第四步 选择测试</a></li>
 	    </ul>
 		</div>
-		<%= form_tag select_exam_teachers_path, method: :post, id: "scoreSearch" do %>
+		<%= form_tag select_exam_teachers_path, method: :get, id: "scoreSearch" do %>
 		  <% if @courses.present? %>
 		  	<% @courses.each_with_index do |course,index| %>
 				  <% if index%4 == 0 %>
