--- a/app/views/teachers/select_exam.html.erb
+++ b/app/views/teachers/select_exam.html.erb
@@ -13,7 +13,7 @@
         <li role="presentation" class="active"><a href="javascript:void(0)">第四步 选择测试</a></li>
       </ul>
     </div>
-    <%= form_tag show_score_teachers_path, method: :post, id: "scoreSearch" do %>
+    <%= form_tag show_score_teachers_path, method: :get, id: "scoreSearch" do %>
       <% if @sub_courses.present? %>
         <% @sub_courses.each_with_index do |sub_course,index| %>
           <% if index%4 == 0 %>
