--- a/app/views/teachers/show_grade_score.html.erb
+++ b/app/views/teachers/show_grade_score.html.erb
@@ -6,13 +6,12 @@
 
   <div class="teacher-wrapper show-score">
     <div class="show-score-title">
-      <a href="javascript:void(0)" class="btn btn-primary">教师查阅</a>
-      <div class="main-title">网络设备维护基础（一）测试</div>
+      <div class="main-title"><%= @sub_course.name %> 测试</div>
     </div>
 
   <div id="everyGradeScore" class="grade-picture">
     <div class="average-score row">
-      <div class="sub-title"><span class="badge">1</span>该课程题目错误率统计图</div>
+      <div class="sub-title"><span class="badge">1</span>该课程题目错误人数统计图</div>
         <div id="wrongPercentage" class="col-sm-11"></div>
     </div>
 
@@ -32,24 +31,21 @@
     tooltip: {
         trigger: 'item'
     },
-     legend: {
-      orient: "vertical",
-      x: "right",
-      y: "top",
-        data:['错误率最高的题目：第11题','错误率最低的题目：第07题']
-    },
     xAxis: [
         {
             type: 'category',
-            data: ['01', '02', '03', '04', '05', '06', '07', '08', '09', '10', '11', '12', '13', '14', '15',
-            '16', '17', '18', '19', '20', '21', '22', '23', '24', '25'],
+            data: [
+              <% @questions.each_with_index do |question, index| %>
+                <%= (index + 1).to_s %>,
+              <% end %>
+            ],
             name: "题目/题"
         }
     ],
     yAxis: [
         {
             type: 'value',
-            name: "错误率/%",
+            name: "错误人数",
             splitNumber: 10
         }
     ],
@@ -75,7 +71,11 @@
                     }
                 }
             },
-            data: [3,4,5,23,12,12,2,23,3,4,56,23,12,23,31,12,34,23,34,50,12,34,18,23,34],
+            data: [
+              <% @questions.each_with_index do |question, index| %>
+                <%= @false_count[question.id].present? ? @false_count[question.id] : 0 %>,
+              <% end %>
+            ],
         }
     ]
   };
