--- a/app/views/teachers/show_score.html.erb
+++ b/app/views/teachers/show_score.html.erb
@@ -36,15 +36,19 @@
         </div>
       <% end %>
 		</div>
-
-		<div class="search-score-btn">
-			<button type="button" class="btn btn-primary">
-			<span class="glyphicon glyphicon-export"></span>
-			导出EXCEL</button>
-			<%= link_to show_grade_score_teachers_path, class: "btn btn-danger" do %>
-			  进入下一页  <span class="glyphicon glyphicon-hand-right"></span>
-		  <% end %>
-		</div>
+    <%= form_tag show_grade_score_teachers_path, method: :get, id: "selectGradeForm" do %>
+      <%= hidden_field_tag "specialty_id", params[:specialty_id]%>
+      <%= hidden_field_tag "course_id", params[:course_id]%>
+      <%= hidden_field_tag "sub_course_id", params[:sub_course_id]%>
+      <%= hidden_field_tag "grade_ids", params[:grade_ids] %>
+  		<div class="search-score-btn">
+  			<button type="button" class="btn btn-primary">
+  			<span class="glyphicon glyphicon-export"></span>
+  			导出EXCEL</button>
+        <%= button_tag(type: 'submit', class: "btn btn-danger", id: "nextStep") do %>
+          进入下一页  <span class="glyphicon glyphicon-hand-right"></span><% end %>
+  		</div>
+    <% end %>
 	</div>
 
   </div>
