--- a/app/views/teachers/show_grade_score.html.erb
+++ b/app/views/teachers/show_grade_score.html.erb
@@ -6,18 +6,47 @@
 
   <div class="teacher-wrapper show-score">
     <div class="show-score-title">
-      <div class="main-title"><%= @sub_course.name %> 测试</div>
+      <div class="main-title"><%= @sub_course.name %></div>
     </div>
 
   <div id="everyGradeScore" class="grade-picture">
     <div class="average-score row">
       <div class="sub-title"><span class="badge">1</span>该课程题目错误人数统计图</div>
-        <div id="wrongPercentage" class="col-sm-11"></div>
+      <div id="wrongPercentage" class="col-sm-11"></div>
+    </div>
+
+    <div class="average-score row">
+      <div class="sub-title"><span class="badge">2</span>各题答题详细情况</div>
+
+      <div class="question-list">
+        <% @questions.each_with_index do |question, index| %>
+          <div class="question">
+            <div class="title text-info">
+              <%= index + 1 %>. <%= question.title %>（<span class="text-danger"><%= question.correct_option %></span>）
+            </div>
+            <div class="option">
+              <% question.options.each do |option| %>
+                <p><%= option.name %></p>
+              <% end %>
+            </div>
+            <div class="select">
+              答错人数：<span class="text-danger"><%= @exam_analyze[:errors][question.id].present? ? @exam_analyze[:errors][question.id] : 0  %>人</span>
+            </div>
+            <div class="select">
+              各选项选择人数：
+              <% question.options.each_with_index do |option, index| %>
+                <span><%= select_item(index)%>、<%= @exam_analyze[:options][question.id][select_item(index)] || 0 %>人</span>；
+              <% end %>
+            </div>
+          </div>
+          <hr>
+        <% end %>
+      </div>
     </div>
 
     <div class="search-score-btn">
       <button type="button" class="btn btn-primary btn-lg">导出EXCEL</button>
-      <%=link_to "返回首页", root_path, class: "btn btn-danger btn-lg" %>
+      <%#=link_to "返回首页", root_path, class: "btn btn-danger btn-lg" %>
     </div>
   </div>
 
@@ -73,7 +102,7 @@
             },
             data: [
               <% @questions.each_with_index do |question, index| %>
-                <%= @false_count[question.id].present? ? @false_count[question.id] : 0 %>,
+                <%= @exam_analyze[:errors][question.id].present? ? @exam_analyze[:errors][question.id] : 0 %>,
               <% end %>
             ],
         }
