--- a/app/views/teachers/show_grade_score.html.erb
+++ b/app/views/teachers/show_grade_score.html.erb
@@ -45,8 +45,8 @@
     </div>
 
     <div class="search-score-btn">
-      <button type="button" class="btn btn-primary btn-lg">导出EXCEL</button>
-      <%#=link_to "返回首页", root_path, class: "btn btn-danger btn-lg" %>
+      <button type="button" class="btn btn-primary">导出EXCEL</button>
+      <%=link_to "返回上一页", show_score_teachers_path(specialty_id: params[:specialty_id], course_id: params[:course_id], grade_ids:params[:grade_ids], sub_course_id: params[:sub_course_id]) , class: "btn btn-danger" %>
     </div>
   </div>
 
