--- a/app/views/teachers/select_exam.html.erb
+++ b/app/views/teachers/select_exam.html.erb
@@ -40,7 +40,7 @@
       <%= hidden_field_tag "course_id", params[:course_id]%>
       <%= hidden_field_tag "grade_ids", params[:grade_ids] %>
       <div class="search-score-btn">
-        <button type="button" class="btn btn-primary btn" onclick="this.form.action='<%= select_course_teachers_path%>';this.form.submit();">
+        <button type="button" class="btn btn-primary" onclick="this.form.action='<%= select_course_teachers_path%>';this.form.submit();">
         <span class="glyphicon glyphicon-hand-left"></span>上一步</button>
         <%= button_tag(type: 'submit', class: "btn btn-success", id: "nextStep", disabled: true) do %>
           下一步  <span class="glyphicon glyphicon-hand-right"></span>
