--- a/app/assets/stylesheets/application/exams.scss
+++ b/app/assets/stylesheets/application/exams.scss
@@ -1,5 +1,5 @@
 /*考试中心*/
-.exams__index {
+.exams__index, .papers__index, .papers__new, .papers__create, .papers__edit, .papers__update, .papers__show {
   section.common-title {
     height: 60px;
     line-height: 60px;
