--- a/app/views/papers/index.html.erb
+++ b/app/views/papers/index.html.erb
@@ -17,114 +17,29 @@
   <div class="exams-list">
     <table class="table table-bordered">
       <tr>
-        <th>系别</th>
-        <th>专业</th>
         <th>考试科目</th>
+        <th>考试标题</th>
         <th>考试内容</th>
         <th>考试时间</th>
         <th>考试人数</th>
-        <!-- <th>编辑</th> -->
+        <th>操作</th>
       </tr>
+      <% @papers.each do |paper| %>
       <tr>
-        <td>计算机信息系</td>
-        <td>计算机科学与技术</td>
-        <td>计算机信息技术期末考试</td>
-        <td>计算机信息技术期末考试考试内容</td>
-        <td>2015-07-18至2015-07-22</td>
-        <td align="center">40</td>
-        <!-- <td align="center">
-          <a href="javascript:void(0);" class="editExamLink"><span class="glyphicon glyphicon-log-in" aria-hidden="true"></span></a>
-        </td> -->
+        <td><%= paper.course.name %></td>
+        <td><%= paper.name %></td>
+        <td><%= paper.content %></td>
+        <td align="center"><%= paper.start_at.strftime("%F") %>至<%= paper.end_at.strftime("%F") %></td>
+        <td align="center"><%= paper.user_papers.size %></td>
+        <td align="center">
+          <%= link_to("编辑", edit_paper_path(paper)) %> | 
+          <%= link_to("试卷", questions_paper_path(paper)) %> |
+          <%= link_to("考生", edit_paper_path(paper)) %>
+        </td>
       </tr>
-      <tr>
-        <td>计算机信息系</td>
-        <td>计算机科学与技术</td>
-        <td>IOS期末考试</td>
-        <td>IOS期末考试内容IOS期末考试内容IOS期末考试内容</td>
-        <td>2015-07-28至2015-07-30</td>
-        <td align="center">40</td>
-        <!-- <td align="center">
-          <a href="javascript:void(0);" class="editExamLink"><span class="glyphicon glyphicon-log-in" aria-hidden="true"></span></a>
-        </td> -->
-      </tr>
+      <% end %>
     </table>
   </div>
 
 </div>
 
-
-<div id="createDiscuss" class="modal fade">
-  <div class="modal-dialog">
-  <div class="modal-content">
-    <div class="modal-header">
-      <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-      <h4 class="modal-title">新建考试</h4>
-    </div>
-    <div class="modal-body">
-      <form class="form-horizontal">
-        <div class="form-group">
-          <label class="col-sm-3 control-label">考试科目</label>
-          <div class="col-sm-8">
-            <input type="text" class="form-control">
-          </div>
-        </div>
-        <div class="form-group">
-          <label class="col-sm-3 control-label">学院系别</label>
-          <div class="col-sm-8">
-            <select class="form-control">
-              <option></option>
-              <option>计算机信息系</option>
-              <option>珠宝系</option>
-            </select>
-          </div>
-        </div>
-        <div class="form-group">
-          <label class="col-sm-3 control-label">专业</label>
-          <div class="col-sm-8">
-            <select class="form-control">
-              <option></option>
-            </select>
-          </div>
-        </div>
-        <div class="form-group">
-          <label class="col-sm-3 control-label">考试班级</label>
-          <div class="col-sm-8">
-            <select class="form-control">
-              <option></option>
-            </select>
-          </div>
-        </div>
-        <div class="form-group">
-          <label class="col-sm-3 control-label">考试开始时间</label>
-          <div class="col-sm-8">
-            <input type="text" class="form-control">
-          </div>
-        </div>
-        <div class="form-group">
-          <label class="col-sm-3 control-label">考试结束时间</label>
-          <div class="col-sm-8">
-            <input type="text" class="form-control">
-          </div>
-        </div>
-        <div class="form-group">
-          <label class="col-sm-3 control-label">考试内容</label>
-          <div class="col-sm-8">
-            <textarea class="form-control" rows="5">
-              
-            </textarea>
-          </div>
-        </div>
-
-        <div class="form-group">
-          <div class="col-sm-4 col-sm-offset-2 text-center">
-            <button class="btn btn-info">确认发布</button>
-          </div>
-          <div class="col-sm-5 text-center">
-            <button class="btn btn-danger">取消发布</button>
-          </div>
-        </div>
-      </form>
-    </div>
-  </div>
-</div>
-</div>
