--- a/app/views/papers/questions.html.erb
+++ b/app/views/papers/questions.html.erb
@@ -7,9 +7,9 @@
     <%= simple_form_for(@paper, url: import_paper_path(@paper), wrapper: "horizontal_form28", html: { class: "form-horizontal", multipart: true }) do |f| %>
       <table class="table impport-table">
         <tr>
-          <td width="50%"><%= file_field_tag :attachment %></td>
-          <td><%= f.submit "导入试卷", class: "btn btn-success" %>
-          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<%= link_to "导入模板下载", "#", class: "btn btn-info" %></td>
+          <td width="50%" align="right"><%= file_field_tag :attachment %></td>
+          <td ><%= f.submit "导入试卷", class: "btn btn-success", onclick: "if($('#attachment').val()==''){alert('请选择要上传的文件');return false;}" %>
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<%= link_to "导入模板下载", URI.encode('/excels/试卷导入模板.xls'), class: "btn btn-info" %></td>
         </tr>
       </table>
     <% end %>
