--- a/app/assets/stylesheets/application/exams.scss
+++ b/app/assets/stylesheets/application/exams.scss
@@ -1,6 +1,6 @@
 /*考试中心*/
 .exams__index, .papers__index, .papers__new, .papers__create, .papers__edit, .papers__update, 
-.papers__show, .papers__questions, .papers__import {
+.papers__show, .papers__questions, .papers__import, .papers__students, .user_papers__new {
   section.common-title {
     height: 60px;
     line-height: 60px;
