--- a/app/views/papers/questions.html.erb
+++ b/app/views/papers/questions.html.erb
@@ -9,7 +9,7 @@
         <tr>
           <td width="50%" align="right"><%= file_field_tag :attachment %></td>
           <td ><%= f.submit "导入试卷", class: "btn btn-success", onclick: "if($('#attachment').val()==''){alert('请选择要上传的文件');return false;}" %>
-          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<%= link_to "导入模板下载", URI.encode('/excels/试卷导入模板.xls'), class: "btn btn-info" %></td>
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<%= link_to "导入模板下载", URI.encode('/excels/试卷导入模板:.xls'), class: "btn btn-info" %></td>
         </tr>
       </table>
     <% end %>
@@ -76,7 +76,7 @@
       <% end %>
 
       <% if @paper.paper_questions.fill.present? %>
-        <h4>填空题</h4>
+        <h4>填空题：</h4>
         <div class="questions">
           <% @paper.paper_questions.fill.each_with_index do |question, index| %>
             <div class="paper-question">
