--- a/app/views/papers/questions.html.erb
+++ b/app/views/papers/questions.html.erb
@@ -25,7 +25,7 @@
         <div class="questions">
           <% @paper.paper_questions.single.each_with_index do |question, index| %>
             <div class="paper-question">
-              <div class="title"><%= index + 1 %>、<%= question.title %>（<span class="text-danger"><%= question.correct_answer %></span>）</div>
+              <div class="title"><%= index + 1 %>、<span class="text-danger"><%= "（" + question.signal_score.to_s  + "分）"%></span><%= question.title %>（<span class="text-danger"><%= question.correct_answer %></span>）</div>
               <div class="option">
                 <% question.paper_options.each do |option| %>
                   <p><%= option.index_type + '、' + option.content %></p>
@@ -44,7 +44,7 @@
         <div class="questions">
           <% @paper.paper_questions.multi.each_with_index do |question, index| %>
             <div class="paper-question">
-              <div class="title"><%= index + 1 %>、<%= question.title %>（<span class="text-danger"><%= question.correct_answer %></span>）</div>
+              <div class="title"><%= index + 1 %>、<span class="text-danger"><%= "（" + question.signal_score.to_s  + "分）"%></span><%= question.title %>（<span class="text-danger"><%= question.correct_answer %></span>）</div>
               <div class="option">
                 <% question.paper_options.each do |option| %>
                   <p><%= option.index_type + '、' + option.content %></p>
@@ -64,7 +64,7 @@
         <div class="questions">
           <% @paper.paper_questions.judge.each_with_index do |question, index| %>
             <div class="paper-question">
-              <div class="title"><%= index + 1 %>、<%= question.title %>（<span class="text-danger"><%= question.correct_answer %></span>）</div>
+              <div class="title"><%= index + 1 %>、<span class="text-danger"><%= "（" + question.signal_score.to_s  + "分）"%></span><%= question.title %>（<span class="text-danger"><%= question.correct_answer %></span>）</div>
               <div class="option">
                 <p class="hint text-danger">
                 答案解析：<%= question.correct_hint %>
@@ -80,7 +80,7 @@
         <div class="questions">
           <% @paper.paper_questions.fill.each_with_index do |question, index| %>
             <div class="paper-question">
-              <div class="title"><%= index + 1 %>、<%= question.title %></div>
+              <div class="title"><%= index + 1 %>、<span class="text-danger"><%= "（" + question.signal_score.to_s  + "分）"%></span><%= question.title %></div>
               <div class="option">
                 <p class="hint text-danger">
                   答案解析：<%= question.correct_hint %>
@@ -96,7 +96,7 @@
         <div class="questions">
           <% @paper.paper_questions.que_an.each_with_index do |question, index| %>
             <div class="paper-question">
-              <div class="title"><%= index + 1 %>、<%= question.title %></div>
+              <div class="title"><%= index + 1 %>、<span class="text-danger"><%= "（" + question.signal_score.to_s  + "分）"%></span><%= question.title %></div>
               <div class="option">
                 <p class="hint text-danger">
                   答案解析：<%= question.correct_hint %>
