student view paper

--- a/app/views/answers/new.html.erb
+++ b/app/views/answers/new.html.erb
@@ -5,7 +5,7 @@
 
 <div class="main-content">
   <% if @answered %>
-    <%= render partial: 'common/blank_alert', locals: {message: '您已完成了当前考试，请耐心等待老师阅卷!'}%>
+    <%= render partial: 'common/blank_alert', locals: {message: '您已完成了当前考试，考试结束后才能查看试卷!'}%>
   <% elsif @paper.paper_questions.present? %>
     <a href="javascript:void(0)" class="btn btn-success js-start-answer-question">开始考试</a>
     <div class="main-title">
