--- a/app/assets/stylesheets/application/exams.scss
+++ b/app/assets/stylesheets/application/exams.scss
@@ -1,5 +1,5 @@
 /*考试中心*/
-.exams__index, .papers__index, .papers__new, .papers__create, .papers__edit, .papers__update, 
+.exams__index, .papers__index, .papers__new, .papers__create, .papers__edit, .papers__update, .user_papers__detail,
 .papers__show, .papers__questions, .papers__import, .papers__students, .user_papers__new, .answers__new {
   section.common-title {
     height: 60px;
