teacher edit paper

--- a/app/assets/stylesheets/application/custom.scss
+++ b/app/assets/stylesheets/application/custom.scss
@@ -858,7 +858,8 @@ body.courses__show, body.courses__after_class {
 	}
 }
 /*考试页面*/
-body.exams__new, body.exams__show, body.exams__test_new,  body.exams__show_test, .answers__new, .user_papers__detail {
+body.exams__new, body.exams__show, body.exams__test_new,  body.exams__show_test, .answers__new, .user_papers__detail,
+.user_papers__edit {
 	.main-content {
 		padding: 20px 40px;
 		background: #fff;
