--- a/app/views/teachers/my_account.html.erb
+++ b/app/views/teachers/my_account.html.erb
@@ -1,47 +1,54 @@
 <%= content_for :script do %>
-  <%= javascript_include_tag "_teacher_page",'data-turbolinks-track' => true  %>
-  <%= javascript_tag do %>
-    get_specialties_path = "<%= get_specialties_user_index_path %>"
-    get_grades_path = "<%= get_grades_user_index_path %>"
-  <% end %>
-  <%= javascript_include_tag "_user_show" %>
+	<%= javascript_include_tag "_teacher_page",'data-turbolinks-track' => true  %>
+	<%= javascript_tag do %>
+		get_specialties_path = "<%= get_specialties_user_index_path %>"
+		get_grades_path = "<%= get_grades_user_index_path %>"
+	<% end %>
+	<%= javascript_include_tag "_user_show" %>
 <%end%>
 
 <div class="main-content">
 	<%= render "left_bar" %>
 	<div class="teacher-content teacher-wrapper none-mt">
-  	<div class="nav-bar">
-  		<%= link_to("个人资料", my_account_teachers_path , class: "btn btn-default by-btn-bg") %>
-      <%= link_to("修改密码", edit_teacher_registration_path , class: "btn btn-default") %>
-  	</div>
-  	<div class="teacher-info-content teacher-wrapper">
-  		<div class="infos col-sm-offset-3">
-		  	<%= simple_form_for(current_teacher, url: teacher_path(current_teacher.id), html: { class: 'form-horizontal' }, wrapper: :horizontal_form, wrapper_mappings: {file: :horizontal_file_input, radio_buttons: :horizontal_radio_and_checkboxes }) do |f|%>
-          <%= f.input :number, label: "教师工号", readonly: true %>
-          <%= f.input :phone, label: "手机号码",required: false, readonly: true %>
-          <%= f.input :name, label: "我的姓名" %>
-          <div class="col-sm-offset-2">
-            <%= image_tag(current_teacher.show_image, class: "img-thumbnail edit-teacher-image") %>
-          </div>
-		  		<%= f.input :avatar, as: :file, label: "我的头像" %>
-          <%= f.association :academy, collection: [['请选择院系','']] + Academy.all.pluck(:name,:id), 
-          as: :select, include_blank: false, label: "所属学院" %>
-          <%= f.input :email, label: "电子邮箱" %>
-          <%= f.input :birthday, label: "出生年月" %>
-          <%= f.input :fax, label: "传真号码" %>
-          <%= f.input :tec_position, label: "专业技术职位" %>
-          <%= f.input :qualification, label: "资格证书" %>
-          <%= f.input :final_education,label: "最终学历" %>
-          <%= f.input :final_degree,label: "最终学位" %>
-          <%= f.input :tec_expertise, label: "教学与技术专长" %>
-          <%= f.input :sex, as: :radio_buttons, collection: ["男", "女"], label: "性别", item_wrapper_class: "radio-inline" %>
-          <%= f.input :signature, label: "个性签名" %>
-		  		<div class="col-sm-6 col-sm-offset-3">
-            <%= f.submit "确认修改", class: "btn btn-success" %>
-            <input class="btn btn-danger" type="button" value="取消修改">
-          </div>
-  		 	<%end%>
-  		</div>
-  	</div>
-  </div>
+		<div class="nav-bar">
+			<%= link_to("个人资料", my_account_teachers_path , class: "btn btn-default by-btn-bg") %>
+			<%= link_to("修改密码", edit_teacher_registration_path , class: "btn btn-default") %>
+		</div>
+		<div class="teacher-info-content teacher-wrapper">
+			<div class="infos col-sm-offset-3">
+				<%= simple_form_for(current_teacher, url: teacher_path(current_teacher.id), html: { class: 'form-horizontal' }, wrapper: :horizontal_form, wrapper_mappings: {file: :horizontal_file_input, radio_buttons: :horizontal_radio_and_checkboxes }) do |f|%>
+					<%= f.input :number, label: "教师工号", readonly: true %>
+					<%= f.input :phone, label: "手机号码",required: false, readonly: true %>
+					<%= f.input :name, label: "我的姓名" %>
+					<div class="col-sm-offset-2">
+						<%= image_tag(current_teacher.show_image, class: "img-thumbnail edit-teacher-image") %>
+					</div>
+					<%= f.input :avatar, as: :file, label: "我的头像" %>
+					<%= f.association :academy, collection: [['请选择院系','']] + Academy.all.pluck(:name,:id), 
+					as: :select, include_blank: false, label: "所属学院" %>
+					<%= f.input :email, label: "电子邮箱" %>
+					<%= f.input :birthday, label: "出生年月" %>
+					<%= f.input :fax, label: "传真号码" %>
+					<%= f.input :tec_position, label: "专业技术职位" %>
+					<%= f.input :qualification, label: "资格证书" %>
+					<%= f.input :final_education,label: "最终学历" %>
+					<%= f.input :final_degree,label: "最终学位" %>
+					<%= f.input :tec_expertise, label: "教学与技术专长" %>
+					<%= f.input :sex, as: :radio_buttons, collection: ["男", "女"], label: "性别", item_wrapper_class: "radio-inline" %>
+					<%= f.input :signature, label: "个性签名" %>
+					<%= f.input :resume, label: "工作简历", input_html: { rows: '8' } %>
+					<div class="col-sm-6 col-sm-offset-3">
+						<%= f.submit "确认修改", class: "btn btn-success" %>
+						<input class="btn btn-danger" type="button" value="取消修改">
+					</div>
+				<%end%>
+			</div>
+		</div>
+	</div>
 </div>
+
+<script>
+	$(function(){
+		$("#teacher_resume").parent().removeClass("col-sm-5").addClass("col-sm-9");
+	})
+</script>
