somethings error info

--- a/app/views/teachers/_teacher_info.html.erb
+++ b/app/views/teachers/_teacher_info.html.erb
@@ -54,7 +54,7 @@
 			  	</li>
 		  	<% end %>
 		<% else %>
-			<li class="width-100">暂未填写工作建立 <%= link_to "前往填写>>", "#{my_account_teachers_path}#teacher_resume" %></li>
+			<li class="width-100">暂未填写工作简历 <%= link_to "前往填写>>", "#{my_account_teachers_path}#teacher_resume" %></li>
 		<% end %>
 	  </ul>
 	</div>
