course data modal

--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -15,7 +15,7 @@
 <% end %>
 
 <div class="main-content">
-  <div class="top-content">
+  <div class="top-content" id="main-video">
 
     <div class="left-content">
       <div class="course-image">
