--- a/app/assets/stylesheets/application/courses.scss
+++ b/app/assets/stylesheets/application/courses.scss
@@ -103,3 +103,33 @@ body.courses__index, body.courses__learning_center, body.teachers__index {
     }
   }
 }
+
+.courses__show {
+  .modal-header {
+    padding: 10px;
+    background: #1a5aa0;
+    color: #fff;
+  }
+  .modal-body {
+    min-height: 500px;
+  }
+}
+
+//申报材料模态框样式
+.iframe-container {
+  padding-bottom: 60%;
+  padding-top: 30px; height: 0; overflow: hidden;
+}
+.iframe-container iframe,
+.iframe-container object,
+.iframe-container embed{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
+.modal.in .modal-dialog {
+  transform: none; /*translate(0px, 0px);*/
+}
