--- a/app/views/courses/1/_course_data.html.erb
+++ b/app/views/courses/1/_course_data.html.erb
@@ -1,7 +1,15 @@
+<%= content_for :script do %>
+  <%= javascript_include_tag  "modal_pdf", 'data-turbolinks-track' => false %>
+<%end%>
+
 <a href="javascript:void(0)" class="btn btn-primary by-btn-bg"><strong>申报材料</strong></a>
 <ul class="container-fluid">
   <li class="col-sm-12">
-    <a href="http://zh.zj-xx.cn/1bynv.html" class="col-sm-10" target="_blank">ios图形界面开发精品课程申报表</a>
-    <a href="http://zh.zj-xx.cn/1bynv.html" class="col-sm-2" target="_blank"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;阅读</a>
+    <a href="/pdfs/1/test.pdf" data-toggle="modal" data-target="#myModal" class="col-sm-10 view-pdf">ios图形界面开发精品课程申报表</a>
+    <a href="/pdfs/1/test.pdf" data-toggle="modal" data-target="#myModal" class="col-sm-2 view-pdf"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;阅读</a>
+  </li>
+  <li class="col-sm-12">
+    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-10">说课视频</a>
+    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-2"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;预览</a>
   </li>
 </ul>
