--- a/app/views/courses/2/_course_data.html.erb
+++ b/app/views/courses/2/_course_data.html.erb
@@ -1,12 +1,15 @@
+<%= content_for :script do %>
+  <%= javascript_include_tag  "modal_pdf", 'data-turbolinks-track' => false %>
+<%end%>
+
 <a href="javascript:void(0)" class="btn btn-primary by-btn-bg"><strong>申报材料</strong></a>
-<br><br>
 <ul class="container-fluid">
   <li class="col-sm-12">
-    <div class="col-sm-2">申报表</div>
-    <div class="col-sm-6">
-      <%= link_to "/docs/2/jingpinkechengshenqing.doc", class: "btn btn-primary" do %>
-        <span class="glyphicon glyphicon-download-alt"> 点击下载精品课程申请表 </span>
-      <% end %>
-    </div>
+    <a href="/pdfs/2/教学大纲.pdf" data-toggle="modal" data-target="#myModal" class="col-sm-10 view-pdf">无线网络设备维护 精品课程申报表</a>
+    <a href="/pdfs/2/教学大纲.pdf" data-toggle="modal" data-target="#myModal" class="col-sm-2 view-pdf"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;阅读</a>
+  </li>
+  <li class="col-sm-12">
+    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-10">说课视频</a>
+    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-2"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;预览</a>
   </li>
 </ul>
