--- a/app/views/courses/2/_course_resource.html.erb
+++ b/app/views/courses/2/_course_resource.html.erb
@@ -4,6 +4,12 @@
 <ul class="container-fluid">
   <div class="col-sm-12"><dt class="col-sm-12">教学大纲</dt></div>
   <li class="col-sm-12">
+    <div class="container">
+			<div class="row">
+				<h2>PDF in modal preview using Easy Modal Plugin</h2>
+		        <a class="btn btn-primary view-pdf" href="http://www.bodossaki.gr/userfiles/file/dummy.pdf">View PDF</a>        
+			</div>
+		</div>
     <a href = "/docs/2/jiaoxuedagang.doc" class="col-sm-10">《无线网络设备维护》教学大纲</a>
     <a href = "/docs/2/jiaoxuedagang.doc" class="col-sm-2">下载</a>
   </li>
