--- a/app/views/admin/common/_header.html.erb
+++ b/app/views/admin/common/_header.html.erb
@@ -8,7 +8,7 @@
     <ul class="nav navbar-nav navbar-right">
       <li class="dropdown">
         <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-          <span class="glyphicon glyphicon-user">管理员</span>
+          <span class="glyphicon glyphicon-user"><%= current_manager.email%></span>
           <ul class="dropdown-menu" role="menu">
             <li><a href="#">个人中心</a></li>
             <li><a href="#">设置</a></li>
