--- a/app/views/admin/common/_left.html.erb
+++ b/app/views/admin/common/_left.html.erb
@@ -1,34 +1,59 @@
 <div id="left-bar" class="col-sm-2">
   <ul id="xcui-menu">
-    <li>
-      <%= link_to admin_categories_path do %>
-        <span class="glyphicon glyphicon-th-list"></span> 章节分类
-      <%end%>
-    </li>
-    <li>
-      <%= link_to admin_courses_path do %>
-        <span class="glyphicon glyphicon-book"></span> 课程列表
-      <%end%>
-    </li>
-    <li>
-      <%= link_to admin_teachers_path do %>
-        <span class="glyphicon glyphicon-user"></span> 教师列表
-      <%end%>
-    </li>
-    <li>
-      <%= link_to admin_users_path do %>
-        <span class="glyphicon glyphicon-tasks"></span> 学生列表
-      <%end%>
-    </li>
-    <li>
-      <%= link_to admin_academies_path do %>
-        <span class="glyphicon glyphicon-flag"></span> 学院列表
-      <%end%>
-    </li>
-    <li>
-      <%= link_to admin_specialties_path do %>
-        <span class="glyphicon glyphicon-th-list"></span> 专业列表
-      <%end%>
-    </li>
+    <% if can? :index, Category %>
+      <li>
+        <%= link_to admin_categories_path do %>
+          <span class="glyphicon glyphicon-th-list"></span> 章节分类
+        <%end%>
+      </li>
+    <% end %>
+
+    <% if can? :index, Course %>
+      <li>
+        <%= link_to admin_courses_path do %>
+          <span class="glyphicon glyphicon-book"></span> 课程列表
+        <%end%>
+      </li>
+    <% end %>
+
+    <% if can? :index, Teacher %>
+      <li>
+        <%= link_to admin_teachers_path do %>
+          <span class="glyphicon glyphicon-user"></span> 教师列表
+        <%end%>
+      </li>
+    <%end%>
+
+    <% if can? :index, User %>
+      <li>
+        <%= link_to admin_users_path do %>
+          <span class="glyphicon glyphicon-tasks"></span> 学生列表
+        <%end%>
+      </li>
+    <%end%>
+
+    <% if can? :index, Academy %>
+      <li>
+        <%= link_to admin_academies_path do %>
+          <span class="glyphicon glyphicon-flag"></span> 学院列表
+        <%end%>
+      </li>
+    <%end%>
+
+    <% if can? :index, Specialty %>
+      <li>
+        <%= link_to admin_specialties_path do %>
+          <span class="glyphicon glyphicon-th-list"></span> 专业列表
+        <%end%>
+      </li>
+    <%end%>
+
+    <% if can? :index, Manager %>
+      <li>
+        <%= link_to admin_managers_path do %>
+          <span class="glyphicon glyphicon-list"></span> 管理人员
+        <%end%>
+      </li>
+    <%end%>
   </ul>
 </div>
