--- a/app/views/admin/questions/index.html.erb
+++ b/app/views/admin/questions/index.html.erb
@@ -26,19 +26,21 @@
 </table>
 <%= paginate @questions%>
 <hr></hr>
-<%= form_tag import_admin_questions_path, multipart: true do %>
-  <%= hidden_field_tag :sub_course_id, @sub_course.id%>
-  <%= hidden_field_tag :course_id, @course.id%>
-  <div class="form-group">
-    <div class="col-sm-12">
-      <div class="col-sm-4">
-        <%= file_field_tag :file, class: 'form-control' %>
-      </div>
-      <div class="col-sm-2">
-        <button class="btn btn-success" type="submit">
-          <span class="glyphicon glyphicon-floppy-save">导入EXCEL试题</span>
-        </button>
+<% if can? :manage, Question %>
+  <%= form_tag import_admin_questions_path, multipart: true do %>
+    <%= hidden_field_tag :sub_course_id, @sub_course.id%>
+    <%= hidden_field_tag :course_id, @course.id%>
+    <div class="form-group">
+      <div class="col-sm-12">
+        <div class="col-sm-4">
+          <%= file_field_tag :file, class: 'form-control' %>
+        </div>
+        <div class="col-sm-2">
+          <button class="btn btn-success" type="submit">
+            <span class="glyphicon glyphicon-floppy-save">导入EXCEL试题</span>
+          </button>
+        </div>
       </div>
     </div>
-  </div>
+  <% end %>
 <% end %>
