--- a/app/views/admin/sub_courses/_sub_course.html.erb
+++ b/app/views/admin/sub_courses/_sub_course.html.erb
@@ -18,15 +18,17 @@
   <td>
     <%= link_to "测试题目", admin_course_sub_course_questions_path(@course.id, sub_course)%>
   </td>
-  <td>
-    <%#= link_to [:admin, @course, sub_course], class: 'btn btn-xs btn-info', title: '查看' do %>
-      <!-- <span class="glyphicon glyphicon-eye-open"></span>
-    <%#end%> -->
-    <%= link_to edit_admin_course_sub_course_path(@course, sub_course), class: 'btn btn-xs btn-default', title: '编辑' do %>
-      <span class="glyphicon glyphicon-edit"></span>
-    <%end%>
-    <%= link_to admin_course_sub_course_path(@course, sub_course), data:{ confirm: 'Are you sure?'},method: :delete, class: 'btn btn-xs btn-danger', title: '删除' do %>
-      <span class="glyphicon glyphicon-trash"></span>
-    <%end%>
-  </td>
+  <% if can? :manage, SubCourse %>
+    <td>
+      <%#= link_to [:admin, @course, sub_course], class: 'btn btn-xs btn-info', title: '查看' do %>
+        <!-- <span class="glyphicon glyphicon-eye-open"></span>
+      <%#end%> -->
+      <%= link_to edit_admin_course_sub_course_path(@course, sub_course), class: 'btn btn-xs btn-default', title: '编辑' do %>
+        <span class="glyphicon glyphicon-edit"></span>
+      <%end%>
+      <%= link_to admin_course_sub_course_path(@course, sub_course), data:{ confirm: 'Are you sure?'},method: :delete, class: 'btn btn-xs btn-danger', title: '删除' do %>
+        <span class="glyphicon glyphicon-trash"></span>
+      <%end%>
+    </td>
+  <% end %>
 </tr>
