--- a/app/views/admin/managers/_manager.html.erb
+++ b/app/views/admin/managers/_manager.html.erb
@@ -1,5 +1,6 @@
 <tr>
   <td><%= manager.number %></td>
+  <td><%= manager.name %></td>
   <td><%= manager.email %></td>
   <td><%= Manager::ListRoles[manager.roles.to_sym] %></td>
   <td>
