--- a/app/views/admin/managers/index.html.erb
+++ b/app/views/admin/managers/index.html.erb
@@ -23,6 +23,7 @@
   <thead>
     <tr>
       <th class="text-center">编号</th>
+      <th class="text-center">姓名</th>
       <th class="text-center">邮箱</th>
       <th class="text-center">角色</th>
       <th class="text-center" colspan="2">操作</th>
