--- a/app/views/admin/common/_header.html.erb
+++ b/app/views/admin/common/_header.html.erb
@@ -8,11 +8,9 @@
     <ul class="nav navbar-nav navbar-right">
       <li class="dropdown">
         <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-          <span class="glyphicon glyphicon-user"><%= current_manager.email%></span>
+          <%= current_manager.email%><span class="caret"></span>
           <ul class="dropdown-menu" role="menu">
-            <li><a href="#">个人中心</a></li>
-            <li><a href="#">设置</a></li>
-            <li><a href="#">退出</a></li>
+            <li class="text-center"><%= link_to "退出", destroy_manager_session_path, method: :delete %></li>
           </ul>
         </a>
       </li>
