--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -102,7 +102,7 @@
     <%= render partial: "courses/1/main", locals: {teacher_courses: @teacher_courses} %>
   <% elsif  @course.number == 64322745 %>
     <%= render partial: "courses/2/main", locals: {teacher_courses: @teacher_courses} %>
-  <% elsif @course.number = 43225020 %>
+  <% elsif @course.number == 43225020 %>
     <%= render partial: "courses/3/main", locals: {teacher_courses: @teacher_courses} %>
   <% end %>
 </div>
