--- a/app/views/courses/2/_course_data.html.erb
+++ b/app/views/courses/2/_course_data.html.erb
@@ -5,8 +5,8 @@
 <a href="javascript:void(0)" class="btn btn-primary by-btn-bg"><strong>申报材料</strong></a>
 <ul class="container-fluid">
   <li class="col-sm-12">
-    <a href="/pdfs/2/教学大纲.pdf" data-toggle="modal" data-target="#myModal" class="col-sm-10 view-pdf">无线网络设备维护 精品课程申报表</a>
-    <a href="/pdfs/2/教学大纲.pdf" data-toggle="modal" data-target="#myModal" class="col-sm-2 view-pdf"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;阅读</a>
+    <a href="/pdfs/2/高职高专上海市精品课程申报表（蔡长英）-20151010.pdf" data-toggle="modal" data-target="#myModal" class="col-sm-10 view-pdf">无线网络设备维护 精品课程申报表</a>
+    <a href="/pdfs/2/高职高专上海市精品课程申报表（蔡长英）-20151010.pdf" data-toggle="modal" data-target="#myModal" class="col-sm-2 view-pdf"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;阅读</a>
   </li>
   <li class="col-sm-12">
     <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-10">说课视频</a>
