--- a/app/views/courses/3/_course_condition.html.erb
+++ b/app/views/courses/3/_course_condition.html.erb
@@ -2,12 +2,43 @@
 <br><br>
 <div class="container-fluid">
 	<dl>
-		<dd>我院建立了3个校内实训基地，拥有近80台苹果一体机，多台ipad、iphone设备，作品展示厅，教师工作室等。为该课程的实训创造了优越的条件。</dd>
-		<dt>1．“移动互联网”教学与实训培训中心</dt>
-		<dd>建成具有iOS系统设计、开发、集成、测试实训功能，兼顾科研、培训一体的校内综合实训中心。</dd>
-		<dt>2．移动互联网软件开发教师工作室</dt>
-		<dd>供教师开发移动互联网项目和企业培训师资。</dd>
-		<dt>3．“移动互联网”多功能展示区</dt>
-		<dd>建成具有iOS系统设计、开发、集成、测试实训功能，兼顾科研、培训一体的校内展示区；企业、教师和学生开发的优秀软件成品在此展示。</dd>
+		<dt>1.校外实训基地</dt>
+			<dd>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;“移动互联网”教学与实训培训中心建成具有iOS系统设计、开发、集成、测试实训功能，兼顾科研、培训一体的校内综合实训中心。建成具有iOS系统设计、开发、集成、测试实训功能，兼顾科研、培训一体的校内综合实训中心。建成具有iOS系统设计、开发、集成、测试实训功能，兼顾科研、培训一体的校内综合实训中心。建成具有iOS系统设计、开发、集成、测试实训功能，兼顾科研、培训一体的校内综合实训中心。建成具有iOS系统设计、开发、集成、测试实训功能，兼顾科研、培训一体的校内综合实训中心。建成具有iOS系统设计、开发、集成、测试实训功能，兼顾科研、培训一体的校内综合实训中心。建成具有iOS系统设计、开发、集成、测试实训功能，兼顾科研、培训一体的校内综合实训中心。建成具有iOS系统设计、开发、集成、测试实训功能，<br >
+			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;兼顾科研、培训一体的校内综合实训中心。建成具有iOS系统设计、开发、集成、测试实训功能，兼顾科研、培训一体的校内综合实训中心。建成具有iOS系统设计、开发、集成、测试实训功能，兼顾科研、培训一体的校内综合实训中心。建成具有iOS系统设计、开发、集成、测试实训功能，兼顾科研、培训一体的校内综合实训中心。建成具有iOS系统设计、开发、集成、测试实训功能，兼顾科研、培训一体的校内综合实训中心。
+			</dd>
+		<dd>
+			<div class="col-md-6 text-center">
+				<%= image_tag("course_3/shop1.png")%><br><br>
+				学生在周大福新世界店顶岗实习
+			</div>
+			<div class="col-md-6 text-center">
+				<%= image_tag("course_3/shop2.png")%><br><br>
+				学生在渭塘珍珠城进行教学实习
+			</div>
+		</dd>
+		<dt>2.校内实训基地</dt>
+		<dd>
+			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;“移动互联网”教学与实训培训中心建成具有iOS系统设计、开发、集成、测试实训功能，兼顾科研、培训一体的校内综合实训中心。建成具有iOS系统设计、开发、集成、测试实训功能，兼顾科研、培训一体的校内综合实训中心。建成具有iOS系统设计、开发、集成、测试实训功能，兼顾科研、培训一体的校内综合实训中心。建成具有iOS系统设计、开发、集成、测试实训功能，兼顾科研、培训一体的校内综合实训中心。建成具有iOS系统设计、开发、集成、测试实训功能，<br>
+		</dd>
+		<dd>
+			1.“移动互联网”教学与<br>实训培训中心建成具有iOS系统设计、开发、集成、测试实训功能，兼顾科研、培训一体的校内综合实训中心。建成具有iOS系统设计、开发、集成、测试实训功能，兼顾科研、培训一体的校内综合实训中心。建成具有iOS系统设计、开发、集成、测试实训功能，兼顾科研、培训一体的校内综合实训中心。建成具有iOS系统设计、开发、集成、测试实训功能，兼顾科研、培训一体的校内综合实训中心。建成具有iOS系统设计、开发、集<br>
+		</dd>
+		<dd>
+			2.“移动互联网”教学与实<br>训培训中心建成具有iOS系统设计、开发、集成、测试实训功能，兼顾科研、培训一体的校内综合实训中心。建成具有iOS系统设计、开发、集成、测试实训功能，兼顾科研、培训一体的校内综合实训中心。建成具有iOS系统设计、开发、集成、测试实训功能，兼顾科研、培训一体的校内综合实训中心。建成具有iOS系统设计、开发、集成、测试实训功能，兼顾科研、培训一体的校内综合实训中心。建成具有iOS系统设计、开发、集<br>
+
+		</dd>	
+		<dd>
+			3.“移动互联网”教学与实<br>训培训中心建成具有iOS系统设计、开发、集成、测试实训功能，兼顾科研、培训一体的校内综合实训中心。建成具有iOS系统设计、开发、集成、测试实训功能，兼顾科研、培训一体的校内综合实训中心。建成具有iOS系统设计、开发、集成、测试实训功能，兼顾科研、培训一体的校内综合实训中心。建成具有iOS系统设计、开发、集成、测试实训功能，兼顾科研、培训一体的校内综合实训中心。建成具有iOS系统设计、开发、集成、测试实训功能，兼顾科研、培训一体的校内综合实训中心。建成具有iOS系统设计、开发<br>
+		</dd>
+		<dd>
+			<div class="col-md-6 text-center">
+				<%= image_tag("course_3/shop3.png")%><br><br>
+				艾达珠宝店
+			</div>
+			<div class="col-md-6 text-center">
+				<%= image_tag("course_3/shop4.png")%><br><br>
+				贵金属首饰镶嵌制作实训室
+			</div>
+		</dd>
 	</dl>
 </div>
